# BinisayLang

./: .gitignore  Cargo.toml  conventions.md  makesvg_linux.sh  readme.md
arg_reader/: Cargo.toml
arg_reader/src/: arg_map.rs  arg_reader.rs  arg_value.rs  lib.rs
bincompiler/: Cargo.toml  bin_grammar.pest
bincompiler/src/: ast.rs  main.rs  parser.rs  translation.rs
bincore/: Cargo.toml
bincore/src/: lib.rs
bincore/src/data/: function.rs  mod.rs  object.rs  program_file.rs  value.rs
bincore/src/executable/: mod.rs  runnable.rs  runtime.rs
bincore/src/object/: mod.rs
binrunner/: Cargo.toml
binrunner/src/: main.rs
